--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,10 @@
 body{
   text-align: center;
 }
+#section1{
+  background-image: url(/images/background1.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  color: #fff;
+  height: 97vh;
+}
