--- a/styles.css
+++ b/styles.css
@@ -31,4 +31,8 @@ body{
     color: #fff;
     padding: 100px 10%;
   }
-  
+  #section4 h1{
+    margin-top: 60px;
+    margin-bottom: 60px;
+    }
+    
