--- a/styles.css
+++ b/styles.css
@@ -38,4 +38,12 @@ body{
     .para1, .para2, .para3{
       display: none;
     }
+    #section5{
+      display: flex;
+      flex-wrap: wrap-reverse;
+      justify-content: center;
+      max-width: 70vw;
+      margin: 25px auto;
+      padding: 5px;
+    }
     
