--- a/styles.css
+++ b/styles.css
@@ -104,4 +104,20 @@ body{
       background-image: url(/images/work8.jpg);
       background-size: cover;
     }
+    .text{
+      background-color: rgba(221, 223, 224, 0.7);
+      width: 100%;
+      height: 100%;
+      margin: auto;
+      position:relative;
+      margin-top: 23px;
+      opacity: 0;
+    }
+    .text:hover{
+      visibility: visible;
+      opacity: 0.8;
+    }
     
+    .text>p {
+      padding-top: 70px;
+    }    
