--- a/styles.css
+++ b/styles.css
@@ -127,4 +127,10 @@ body{
       color: rgb(231, 228, 228);
       max-width: 100vw;
       }  
-      
+      .message{
+        padding: 3px 15px;
+        margin: 7px 2px;
+        width: 700px;
+        max-width: 89%;
+        }
+        
