--- a/styles.css
+++ b/styles.css
@@ -133,4 +133,29 @@ body{
         width: 700px;
         max-width: 89%;
         }
+        form{
+          width: 700px;
+          max-width: 90%;
+        }
+        
+        form input{
+          width:49%;
+        }
+        
+        form input, form textarea{
+          background: transparent;
+          border: 1px solid white;
+          color: white;
+          padding: 7px;
+        }
+        form textarea{
+          margin-top: 20px;
+          width: 98.8%;
+        }
+        footer{
+          padding-top: 40px;
+          text-align: center;
+          max-width: 70vw;
+          margin: 0 auto;
+        }
         
