--- a/styles.css
+++ b/styles.css
@@ -158,4 +158,22 @@ body{
           max-width: 70vw;
           margin: 0 auto;
         }
+        @media only screen and (max-width: 1024px){
+          .col-md-12 h1,#section2 h1,#section3 h1,#section4 h1 {
+          font-size: calc(3vw + 3vh + .5vmin);
+        }
+        .col-md-12 p,#section2 p,#section3 p {
+          font-size: calc(1vw + 1vh + .5vmin);
+        }
+        }
+        @media only screen and (max-width: 1024px){
+          form input, form textarea{
+          width: 100%;
+          margin: 7px 0;
+        }
+          form input[type=submit]{
+          width: auto;
+          padding: 0 20%;
         
+        }
+        }
