--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,9 @@ body{
     .para1, .para2, .para3{
       display: none;
     }
+    #section5 h1{
+      -ms-flex-align: start;
+    }
     #section5{
       display: flex;
       flex-wrap: wrap-reverse;
