--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body{
   text-align: center;
 }
 #section1{
-  background-image: url(./images/background1.jpg);
+  background-image: url(/images/background1.jpg);
   background-size: cover;
   background-attachment: fixed;
   color: #fff;
