--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@ body{
     }  
     
 #section6{
-  background-image: url(/images/background3.jpg);
+  background-image: url(./images/background3.jpg);
   padding: 40px 5px;
   color: rgb(231, 228, 228);
   max-width: 100vw;
